# BiscuitDownloader

./: .gitignore  README.md  main.py  output.html  util.py
Biscuit/: .gitignore  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
Biscuit/src/: App.vue  DownloadCards.vue  SprinkleFlowers.vue  TitleWithLogo.vue  TopRightButtons.vue  main.ts
Biscuit/src-tauri/: Cargo.toml  tauri.conf.json
Biscuit/src-tauri/capabilities/: default.json
Biscuit/src-tauri/icons/: icon.icns
Biscuit/src-tauri/src/: lib.rs  main.rs
BiscuitDownloader_python/: .gitignore  main.py  util.py
BiscuitDownloader_rust/: Cargo.toml
BiscuitDownloader_rust/src/: main.rs
