[package]
name = "biscuit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "biscuit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2.2", features = [] }
tauri-plugin-opener = "2.2.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tauri-plugin-shell = "2.2.0"
reqwest = { version = "0.12.12", features = ["blocking", "cookies"] }
html-escape = "0.2.13"
regex = "1.11.1"
scraper = "0.22.0"
tokio = "1.43"

